# talis-desk

./: .gitignore  README.md  index.html  probe.html  pyproject.toml  run.json  run_daily_brief.py  run_full_desk.py  run_swarm.py
docs/: CODEX_PROD_REVIEW_2026-05-20.md  REFLECTION_AND_REFACTOR_v5.md
launch-gate/: index.html  launch_gate_report.json  launch_gate_report.md  scout_system_launch_gate_report.md
scout-intelligence/: index.html  run.json
scout-system-test/: 100_scout_readiness_report.json  alpha_geometry.json  alpha_geometry_cortex_review.json  index.html  market_evolve_hard_experiment.json  market_evolve_lineage.json  market_evolve_step.json  run.json
scripts/: analyze_live_scout_run.py  evaluate_information_price_outcomes.py  evaluate_live_scout_tournament.py  export_100_scout_system_viewer.py  export_agent_graph_viewer.py  export_market_evolve_scoreboard.py  export_prompt_viewer.py  promote_analysis_tool_proposals.py  run_100_scout_readiness_slice.py  run_guarded_shadow_production.py  run_live_scout_canary.py  run_scout_system_launch_gate.py  run_talis_intelligence_cadence.py  smoke_debate_and_peer.py  smoke_node_intelligence_groundup.py  smoke_research_reports.py
talis_desk/: __init__.py  _tic_config.py  cadence.py  cost_ledger.py
tests/: test_100_scout_system_viewer.py  test_agent_graph_viewer.py  test_agent_harness.py  test_grok_x_alpha_surface.py  test_guarded_shadow_production.py  test_information_map.py  test_information_perfusion.py  test_information_price_outcomes.py  test_intelligence_cadence.py  test_live_scout_learning_report.py  (+7 more)
(+199 files in other folders)
